--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
-  "name": "@coachcare/datepicker",
-  "version": "0.9.5",
-  "description": "Angular Material Datepicker Fork with Timepicker by CoachCare",
+  "name": "@martindalec/material-datepicker",
+  "version": "0.9.6",
+  "description": "Angular Material Datepicker with Timepicker",
   "keywords": [
-    "coachcare",
     "frontend",
-    "datepicker"
+    "datepicker",
+    "datetimepicker"
   ],
-  "author": "CoachCare.com",
-  "homepage": "https://www.coachcare.com",
+  "author": "Chris Martindale",
+  "homepage": "https://github.com/martindalec/material-datepicker",
   "license": "MIT",
-  "repository": "github:selvera/npm-datepicker",
+  "repository": "github:martindalec/material-datepicker",
   "bugs": {
-    "url": "https://github.com/selvera/npm-datepicker/issues"
+    "url": "https://github.com/martindalec/material-datepicker/issues"
   },
   "scripts": {
     "ng": "ng",
