--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@martindalec/material-datepicker",
-  "version": "0.9.14",
+  "version": "0.9.12",
   "description": "Angular Material Datepicker with Timepicker",
   "keywords": [
     "frontend",
@@ -68,8 +68,7 @@
   },
   "standard-version": {
     "scripts": {
-      "postbump": "npm run dist",
-      "posttag": "git push --follow-tags origin master"
+      "postbump": "npm run dist"
     }
   }
 }
