--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@martindalec/material-datepicker",
-  "version": "0.9.15",
+  "version": "0.10.0",
   "description": "Angular Material Datepicker with Timepicker",
   "keywords": [
     "frontend",
@@ -29,42 +29,41 @@
     "release": "standard-version --message 'build: release v%s'"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/core": "^0.4.2",
-    "@angular/animations": "^6.0.4",
-    "@angular/cdk": "^6.0.0",
-    "@angular/cli": "~6.0.0",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
-    "@angular/language-service": "^6.0.4",
-    "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular-devkit/build-angular": "0.10.5",
+    "@angular-devkit/build-ng-packagr": "0.10.5",
+    "@angular-devkit/core": "7.3.6",
+    "@angular/animations": "7.2.10",
+    "@angular/cdk": "7.3.5",
+    "@angular/cli": "7.3.6",
+    "@angular/common": "7.2.10",
+    "@angular/compiler": "7.2.10",
+    "@angular/compiler-cli": "7.2.10",
+    "@angular/core": "7.2.10",
+    "@angular/forms": "7.2.10",
+    "@angular/http": "7.2.10",
+    "@angular/language-service": "7.2.10",
+    "@angular/material": "7.3.5",
+    "@angular/platform-browser": "7.2.10",
+    "@angular/platform-browser-dynamic": "7.2.10",
+    "@angular/router": "7.2.10",
     "@commitlint/cli": "^5.0.0",
     "@commitlint/config-angular": "^5.0.0",
-    "@types/moment-timezone": "^0.5.4",
+    "@types/moment-timezone": "^0.5.6",
     "core-js": "^2.4.1",
     "cpx": "^1.5.0",
     "fs-extra": "^5.0.0",
-    "moment": ">= 2.18.1",
-    "moment-timezone": ">= 0.5.14",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.23",
     "ng-packagr": "^3.0.2",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs": "6.4.0",
     "scss-bundle": "^2.1.2",
     "standard-version": "^4.3.0",
     "tsickle": "^0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.9.0",
-    "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
+    "tslib": "^1.9.3",
+    "tslint": "~5.11.0",
+    "typescript": "3.1.6",
+    "zone.js": "^0.8.29"
   },
   "standard-version": {
     "scripts": {
