--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@martindalec/material-datepicker",
-  "version": "0.10.0",
+  "version": "0.10.3",
   "description": "Angular Material Datepicker with Timepicker",
   "keywords": [
     "frontend",
@@ -29,37 +29,40 @@
     "release": "standard-version --message 'build: release v%s'"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.10.5",
-    "@angular-devkit/build-ng-packagr": "0.10.5",
-    "@angular-devkit/core": "7.3.6",
-    "@angular/animations": "7.2.10",
-    "@angular/cdk": "7.3.5",
-    "@angular/cli": "7.3.6",
-    "@angular/common": "7.2.10",
-    "@angular/compiler": "7.2.10",
-    "@angular/compiler-cli": "7.2.10",
-    "@angular/core": "7.2.10",
-    "@angular/forms": "7.2.10",
-    "@angular/http": "7.2.10",
-    "@angular/language-service": "7.2.10",
-    "@angular/material": "7.3.5",
-    "@angular/platform-browser": "7.2.10",
-    "@angular/platform-browser-dynamic": "7.2.10",
-    "@angular/router": "7.2.10",
+    "@angular-devkit/build-angular": "0.13.8",
+    "@angular-devkit/build-ng-packagr": "0.13.8",
+    "@angular-devkit/core": "7.3.8",
+    "@angular/animations": "7.2.12",
+    "@angular/cdk": "7.3.7",
+    "@angular/cli": "7.3.8",
+    "@angular/common": "7.2.12",
+    "@angular/compiler": "7.2.12",
+    "@angular/compiler-cli": "7.2.12",
+    "@angular/core": "7.2.12",
+    "@angular/flex-layout": "7.0.0-beta.24",
+    "@angular/forms": "7.2.12",
+    "@angular/http": "7.2.12",
+    "@angular/language-service": "7.2.12",
+    "@angular/material": "7.3.7",
+    "@angular/platform-browser": "7.2.12",
+    "@angular/platform-browser-dynamic": "7.2.12",
+    "@angular/router": "7.2.12",
     "@commitlint/cli": "^5.0.0",
     "@commitlint/config-angular": "^5.0.0",
     "@types/moment-timezone": "^0.5.6",
-    "core-js": "^2.4.1",
+    "core-js": "2.6.4",
     "cpx": "^1.5.0",
     "fs-extra": "^5.0.0",
     "moment": "2.24.0",
     "moment-timezone": "0.5.23",
-    "ng-packagr": "^3.0.2",
+    "ng-packagr": "5.0.1",
+    "node-fs-extra": "0.8.2",
     "rimraf": "^2.6.2",
     "rxjs": "6.4.0",
+    "rxjs-compat": "6.4.0",
     "scss-bundle": "^2.1.2",
     "standard-version": "^4.3.0",
-    "tsickle": "^0.29.0",
+    "tsickle": "0.34.3",
     "tslib": "^1.9.3",
     "tslint": "~5.11.0",
     "typescript": "3.1.6",
