--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "@martindalec/material-datepicker",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Angular Material Datepicker with Timepicker",
   "keywords": [
     "frontend",
@@ -29,44 +29,43 @@
     "release": "standard-version --message 'build: release v%s'"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.8",
-    "@angular-devkit/build-ng-packagr": "0.13.8",
-    "@angular-devkit/core": "7.3.8",
-    "@angular/animations": "7.2.12",
-    "@angular/cdk": "7.3.7",
-    "@angular/cli": "7.3.8",
-    "@angular/common": "7.2.12",
-    "@angular/compiler": "7.2.12",
-    "@angular/compiler-cli": "7.2.12",
-    "@angular/core": "7.2.12",
-    "@angular/flex-layout": "7.0.0-beta.24",
-    "@angular/forms": "7.2.12",
-    "@angular/http": "7.2.12",
-    "@angular/language-service": "7.2.12",
-    "@angular/material": "7.3.7",
-    "@angular/platform-browser": "7.2.12",
-    "@angular/platform-browser-dynamic": "7.2.12",
-    "@angular/router": "7.2.12",
+    "@angular-devkit/build-angular": "0.900.1",
+    "@angular-devkit/build-ng-packagr": "0.900.1",
+    "@angular-devkit/core": "9.0.0",
+    "@angular/animations": "9.0.0",
+    "@angular/cdk": "9.0.0",
+    "@angular/cli": "9.0.1",
+    "@angular/common": "9.0.0",
+    "@angular/compiler": "9.0.0",
+    "@angular/compiler-cli": "9.0.0",
+    "@angular/core": "9.0.0",
+    "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/forms": "9.0.0",
+    "@angular/language-service": "9.0.0",
+    "@angular/material": "9.0.0",
+    "@angular/platform-browser": "9.0.0",
+    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/router": "9.0.0",
     "@commitlint/cli": "^5.0.0",
     "@commitlint/config-angular": "^5.0.0",
-    "@types/moment-timezone": "^0.5.6",
-    "core-js": "2.6.4",
+    "@types/moment-timezone": "^0.5.12",
+    "core-js": "3.6.4",
     "cpx": "^1.5.0",
     "fs-extra": "^5.0.0",
     "moment": "2.24.0",
-    "moment-timezone": "0.5.23",
-    "ng-packagr": "5.0.1",
+    "moment-timezone": "0.5.27",
+    "ng-packagr": "9.0.0",
     "node-fs-extra": "0.8.2",
+    "node-sass": "4.13.1",
     "rimraf": "^2.6.2",
-    "rxjs": "6.4.0",
-    "rxjs-compat": "6.4.0",
+    "rxjs": "6.5.4",
     "scss-bundle": "^2.1.2",
     "standard-version": "^4.3.0",
-    "tsickle": "0.34.3",
-    "tslib": "^1.9.3",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.6",
-    "zone.js": "^0.8.29"
+    "tsickle": "0.38.0",
+    "tslib": "^1.10.0",
+    "tslint": "6.0.0",
+    "typescript": "3.7.5",
+    "zone.js": "^0.10.2"
   },
   "standard-version": {
     "scripts": {
